src/test/ui/error-codes/E0530.stderr
error[E0530]: match bindings cannot shadow tuple variants
  --> $DIR/E0530.rs:10:9
   |
LL | use Enum::*;
   |     ------- the tuple variant `WithField` is imported here
...
LL |         WithField => {}
   |         ^^^^^^^^^
   |         |
   |         cannot be named the same as a tuple variant
   |         help: try specify the pattern arguments: `WithField(..)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0530`.
